# wayfire-global-filter

./: README.md  global-filter.cpp  meson.build
